--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ canvas{
   left: 0;
 }
 
+
 :root {
   --dark-bg: rgba(15, 15, 15, 0.685);
   --spacing: 300px;
@@ -15,17 +16,18 @@ canvas{
 
 
 main {
-  width: 100vw;
   color: rgba(255, 255, 255, 0.795);
-  z-index: 99;
+  z-index: 1;
   position: absolute;
-  width: 98%;
-  margin: 0px auto;
-  padding: 120px 0px;
-  
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;  
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
+
+
 
 h1, h2, h3, blockquote {
   font-family: elevon, sans-serif;
@@ -33,55 +35,99 @@ h1, h2, h3, blockquote {
   font-style: normal;
 }
 
-canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
+header {
+  background: var(--dark-bg);
+  grid-column: 2 / span 4;
+  font-size: 2.5rem;
+  padding: 2rem;
+  margin-bottom: var(--spacing);
 }
 
+section {
+  grid-column: 2 / 8;
+  padding: 1rem;
+  background: var(--dark-bg);
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-bottom: var(--spacing);
+}
 
+blockquote {
+  margin: 0;
+  padding: 0;
+  grid-column: 2 / span 9;
+  margin-bottom: var(--spacing);
+  background-color: rgba(255, 255, 255, 0.795);
+}
 
+blockquote p {
+  color: black;
+  
+  font-size: 4rem;
+  display: inline;
+  line-height: 1;
+}
+
+.left {
+  grid-column: 6 / 12;
+}
+a{
+  text-decoration: none; 
+  color: aqua;
+}
+img{
+  width: 400px;
+  padding: 1rem;
+}
+@media all and (max-width: 1300px) {
   header {
     background: var(--dark-bg);
-    grid-column: 2 / span 4;
+    grid-column: 2 / span 6;
     font-size: 2.5rem;
     padding: 2rem;
     margin-bottom: var(--spacing);
   }
 
-  section {
-    grid-column: 2 / 8;
-    padding: 1rem;
-    background: var(--dark-bg);
-    font-size: 1.25rem;
-    line-height: 1.5;
-    margin-bottom: var(--spacing);
-  }
+}
 
-  blockquote {
-    margin: 0;
-    padding: 0;
-    grid-column: 2 / span 9;
-    margin-bottom: var(--spacing);
-    background-color: rgba(255, 255, 255, 0.795);
+@media all and (max-width: 850px) {
+  :root {
+    --spacing: 200px;
   }
+  
+  main{
+    display: block;
+  }
+  blockquote p { 
+    font-size: 2.5rem;
+  }
+}
 
-  blockquote p {
-    color: black;
-    
-    font-size: 4rem;
-    display: inline;
-    line-height: 1;
+@media all and (max-width: 562px) {
+  :root {
+    --spacing: 100px;
   }
-
-  .left {
-    grid-column: 6 / 12;
+  
+  h1, h2, h3, blockquote {
+    font-weight: 700;
   }
-  a{
-    text-decoration: none; 
-    color: aqua;
+  main{
+    display: block;
+  }
+  header {
+    font-size: 1.5rem;
+  }
+  blockquote p { 
+    font-size: 2.5rem !important;
   }
   img{
-    width: 400px;
+    width: 90%;
     padding: 1rem;
+    margin: 0 auto;
   }
+  section {
+    padding: 1rem;
+    font-size: 1.1rem;
+    line-height: 1.5;
+  }
+}
