--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ canvas{
   font-style: normal;
 }
 
+.icon{
+  width: 30px;
+  height: auto;
+}
+.icon:hover{
+  box-shadow: 0px 0px 5px 1px rgb(255 255 255 / 51%);
+}
+
 
 main {
   color: rgba(255, 255, 255, 0.795);
@@ -75,10 +83,12 @@ a{
   text-decoration: none; 
   color: aqua;
 }
-img{
+.screenshot{
   width: 400px;
   padding: 1rem;
 }
+
+
 @media all and (max-width: 1300px) {
   header {
     background: var(--dark-bg);
@@ -120,7 +130,7 @@ img{
   blockquote p { 
     font-size: 2.5rem !important;
   }
-  img{
+  .screenshot{
     width: 90%;
     padding: 1rem;
     margin: 0 auto;
